-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.0 RC2, 6.0.0
-
None
-
-
13
-
0ca46358321f2244386b0b6558a915cda8c6c006 (qt/qtbase/dev) b97001aa1cbd21008ebc48fe61b15fbcacb14875 (qt/qtbase/6.0)
-
Qt6_Foundation_Sprint 24
I've been testing the Qt 6 dev branch for many months, I only recently see QCache related crashes. Qt 6 RC 2 seem to be affected. There is no crash with Qt 5.15.2.
This is on openSUSE 15.2. My Qt 6 RC 2 repo is here: https://build.opensuse.org/project/show/home:jonaski:qt6
Thread 364 "Thread (pooled)" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fff76ffd700 (LWP 29025)] QCache<QString, QHostInfoCache::QHostInfoCacheElement>::unlink (n=<optimized out>, this=<optimized out>) at include/QtCore/../../../src/corelib/tools/qcache.h:155 155 include/QtCore/../../../src/corelib/tools/qcache.h: No such file or directory. Missing separate debuginfos, use: zypper install libjavascriptcoregtk-4_0-18-debuginfo-2.28.4-lp152.2.4.3.x86_64 libproxy1-config-kde-debuginfo-0.4.15-lp152.5.3.1.x86_64 libproxy1-networkmanager-debuginfo-0.4.15-lp152.5.3.1.x86_64 libproxy1-pacrunner-webkit-debuginfo-0.4.15-lp152.5.3.1.x86_64 (gdb) bt #0 0x00007ffff5407d3a in QCache<QString, QHostInfoCache::QHostInfoCacheElement>::unlink(QCache<QString, QHostInfoCache::QHostInfoCacheElement>::Node*) (n=<optimized out>, this=<optimized out>) at include/QtCore/../../../src/corelib/tools/qcache.h:155 #1 0x00007ffff5407d3a in QCache<QString, QHostInfoCache::QHostInfoCacheElement>::trim(long long) (m=127, this=0x7fff40002a88) at include/QtCore/../../../src/corelib/tools/qcache.h:186 #2 0x00007ffff5407d3a in QCache<QString, QHostInfoCache::QHostInfoCacheElement>::insert(QString const&, QHostInfoCache::QHostInfoCacheElement*, long long) (cost=1, object=0x7fffa00669f0, key=..., this=0x7fff40002a88) at include/QtCore/../../../src/corelib/tools/qcache.h:244 #3 0x00007ffff5407d3a in QHostInfoCache::put(QString const&, QHostInfo const&) (this=0x7fff40002a80, name=..., info=...) at ../src/network/kernel/qhostinfo.cpp:1167 #4 0x00007ffff540cb61 in QHostInfoRunnable::run() (this=0x7fff400185e0) at ../src/network/kernel/qhostinfo.cpp:877 #5 0x00007ffff3d925df in QThreadPoolThread::run() (this=0x7fff6807b4f0) at ../src/corelib/thread/qthreadpool.cpp:99 #6 0x00007ffff3d8b5de in QThreadPrivate::start(void*) (arg=0x7fff6807b4f0) at ../src/corelib/thread/qthread_unix.cpp:329 #7 0x00007ffff38904f9 in start_thread () at /lib64/libpthread.so.0 #8 0x00007ffff0baefbf in clone () at /lib64/libc.so.6 (gdb)
Thread 33 "QNetworkAccessM" received signal SIGSEGV, Segmentation fault.Thread 33 "QNetworkAccessM" received signal SIGSEGV, Segmentation fault.[Switching to Thread 0x7fff569c2700 (LWP 32216)]0x00007ffff54027ae in QCache<QString, QHostInfoCache::QHostInfoCacheElement>::relink (key=..., this=0x7fff48002a88) at include/QtCore/../../../src/corelib/tools/qcache.h:171171 include/QtCore/../../../src/corelib/tools/qcache.h: No such file or directory.Missing separate debuginfos, use: zypper install krb5-debuginfo-1.16.3-lp152.5.13.1.x86_64 libX11-6-debuginfo-1.6.5-lp152.5.9.1.x86_64 libX11-xcb1-debuginfo-1.6.5-lp152.5.9.1.x86_64 libasound2-debuginfo-1.1.5-lp152.9.4.1.x86_64 libblkid1-debuginfo-2.33.1-lp152.5.3.1.x86_64 libbrotlicommon1-debuginfo-1.0.9-lp152.2.3.1.x86_64 libbrotlidec1-debuginfo-1.0.9-lp152.2.3.1.x86_64 libcom_err2-debuginfo-1.43.8-lp152.11.3.1.x86_64 libfreetype6-debuginfo-2.10.1-lp152.2.5.1.x86_64 libgcc_s1-debuginfo-10.2.1+git583-lp152.2.2.x86_64 libgnutls30-debuginfo-3.6.7-lp152.9.6.1.x86_64 libgomp1-debuginfo-10.2.1+git583-lp152.2.2.x86_64 libgtk-3-0-debuginfo-3.24.20-lp152.2.3.1.x86_64 libjavascriptcoregtk-4_0-18-debuginfo-2.28.4-lp152.2.4.3.x86_64 libjpeg8-debuginfo-8.1.2-lp152.8.3.1.x86_64 libmount1-debuginfo-2.33.1-lp152.5.3.1.x86_64 libopenssl1_1-debuginfo-1.1.1d-lp152.7.6.1.x86_64 libopus0-debuginfo-1.3.1-lp152.2.3.1.x86_64 libproxy1-config-kde-debuginfo-0.4.15-lp152.5.3.1.x86_64 libproxy1-debuginfo-0.4.15-lp152.5.3.1.x86_64 libproxy1-networkmanager-debuginfo-0.4.15-lp152.5.3.1.x86_64 libproxy1-pacrunner-webkit-debuginfo-0.4.15-lp152.5.3.1.x86_64 libstdc++6-debuginfo-10.2.1+git583-lp152.2.2.x86_64 libsystemd0-debuginfo-234-lp152.31.13.1.x86_64 libudev1-debuginfo-234-lp152.31.13.1.x86_64 libunwind-debuginfo-1.2.1-lp152.5.3.1.x86_64 libusb-1_0-0-debuginfo-1.0.21-lp152.4.3.1.x86_64 libuuid1-debuginfo-2.33.1-lp152.5.3.1.x86_64 libxcb-glx0-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb-randr0-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb-render0-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb-shape0-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb-sync1-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb-xfixes0-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb-xinput0-debuginfo-1.13-lp152.5.3.1.x86_64 libxcb1-debuginfo-1.13-lp152.5.3.1.x86_64 libxml2-2-debuginfo-2.9.7-lp152.10.3.1.x86_64 libz1-debuginfo-1.2.11-lp152.8.6.1.x86_64(gdb) bt#0 0x00007ffff54027ae in QCache<QString, QHostInfoCache::QHostInfoCacheElement>::relink(QString const&) const (key=..., this=0x7fff48002a88) at include/QtCore/../../../src/corelib/tools/qcache.h:171#1 0x00007ffff54027ae in QCache<QString, QHostInfoCache::QHostInfoCacheElement>::object(QString const&) const (key=..., this=0x7fff48002a88) at include/QtCore/../../../src/corelib/tools/qcache.h:262#2 0x00007ffff54027ae in QHostInfoCache::get(QString const&, bool*) (this=0x7fff48002a80, name=..., valid=valid@entry=0x7fff569c1293) at ../src/network/kernel/qhostinfo.cpp:1142#3 0x00007ffff540722b in qt_qhostinfo_lookup(QString const&, QObject*, char const*, bool*, int*) (name=..., receiver=0x7fff48039b40, member=member@entry=0x7ffff54de360 "1_q_hostLookupFinished(QHostInfo)", valid=valid@entry=0x7fff569c1293, id=id@entry=0x7fff569c1294) at ../src/network/kernel/qhostinfo.cpp:1088#4 0x00007ffff54577aa in QHttpNetworkConnectionPrivate::startHostInfoLookup() (this=this@entry=0x7fff48037840) at ../src/network/access/qhttpnetworkconnection.cpp:1197#5 0x00007ffff5458ef0 in QHttpNetworkConnectionPrivate::queueRequest(QHttpNetworkRequest const&) (this=0x7fff48037840, request=...) at ../src/network/access/qhttpnetworkconnection.cpp:658#6 0x00007ffff5459599 in QHttpNetworkConnection::sendRequest(QHttpNetworkRequest const&) (this=<optimized out>, request=...) at ../src/network/access/qhttpnetworkconnection.cpp:1354#7 0x00007ffff546cb89 in QHttpThreadDelegate::startRequest() (this=0x7fffd400eae0) at ../src/network/access/qhttpthreaddelegate.cpp:361#8 0x00007ffff53b72ad in QHttpThreadDelegate::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at src/network/Network_autogen/JYXB7FYCGW/moc_qhttpthreaddelegate_p.cpp:232#9 0x00007ffff3e9701b in QObject::event(QEvent*) (this=0x7fffd400eae0, e=0x555557d16a40) at ../src/corelib/kernel/qobject.cpp:1306#10 0x00007ffff6af307c in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry= 0x555556512200, receiver=receiver@entry=0x7fffd400eae0, e=e@entry=0x555557d16a40) at ../src/widgets/kernel/qapplication.cpp:3390#11 0x00007ffff6afcc60 in QApplication::notify(QObject*, QEvent*) (this=0x7fffffffd420, receiver=0x7fffd400eae0, e=0x555557d16a40) at ../src/widgets/kernel/qapplication.cpp:3138#12 0x00007ffff3c00873 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x7fffd400eae0, event=0x555557d16a40) at ../src/corelib/kernel/qcoreapplication.cpp:1040#13 0x00007ffff3c00a0e in QCoreApplication::sendEvent(QObject*, QEvent*) (receiver=<optimized out>, event=event@entry=0x555557d16a40) at ../src/corelib/kernel/qcoreapplication.cpp:1442#14 0x00007ffff3c04636 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x555557c1ef70) at ../src/corelib/kernel/qcoreapplication.cpp:1801#15 0x00007ffff3c04978 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at ../src/corelib/kernel/qcoreapplication.cpp:1660#16 0x00007ffff3e66423 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x7fff48001420) at ../src/corelib/kernel/qeventdispatcher_glib.cpp:277#17 0x00007ffff128b464 in g_main_dispatch (context=0x7fff48006db0) at ../glib/gmain.c:3216#18 0x00007ffff128b464 in g_main_context_dispatch (context=context@entry=0x7fff48006db0) at ../glib/gmain.c:3881#19 0x00007ffff128b800 in g_main_context_iterate (context=context@entry=0x7fff48006db0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:3954--Type <RET> for more, q to quit, c to continue without paging--#20 0x00007ffff128b88c in g_main_context_iteration (context=0x7fff48006db0, may_block=may_block@entry=1) at ../glib/gmain.c:4015#21 0x00007ffff3e65d86 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7fff48005980, flags=...) at ../src/corelib/kernel/qeventdispatcher_glib.cpp:429#22 0x00007ffff3c0ce52 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fff569c1b10, flags=..., flags@entry=...) at ../src/corelib/kernel/qeventloop.cpp:232#23 0x00007ffff3d0769a in QThread::exec() (this=<optimized out>) at ../src/corelib/thread/qthread.cpp:545#24 0x00007ffff3d820de in QThreadPrivate::start(void*) (arg=0x555557c29da0) at ../src/corelib/thread/qthread_unix.cpp:329#25 0x00007ffff38814f9 in start_thread () at /lib64/libpthread.so.0#26 0x00007ffff0b9ffbf in clone () at /lib64/libc.so.6(gdb)
| For Gerrit Dashboard: QTBUG-89176 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 326060,4 | QCache: fix updating entries breaking the internal chain | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 327286,2 | QCache: fix updating entries breaking the internal chain | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |