tests/auto/corelib/tools/qcache/tst_qcache.cpp
@@ -48,6 +48,7 @@ private slots:
     void take();
     void axioms_on_key_type();
     void largeCache();
+    void internalChainOrderAfterEntryUpdate();
 };
 
 
@@ -412,6 +413,22 @@ void tst_QCache::largeCache()
     }
     cache.clear();
     QVERIFY(cache.size() == 0);
+}
+
+// The internal chain could lose track of some objects.
+// Make sure it doesn't happen again.
+void tst_QCache::internalChainOrderAfterEntryUpdate()
+{
+    QCache<QString, int> cache;
+    cache.setMaxCost(20);
+    cache.insert(QString::number(1), new int, 1);
+    cache.insert(QString::number(2), new int, 1);
+    cache.insert(QString::number(1), new int, 1);
+    // If the chain is still 'in order' then setting maxCost == 0 should
+    // a. not crash, and
+    // b. remove all the elements in the QHash
+    cache.setMaxCost(0);
+    QCOMPARE(cache.size(), 0);
 }
 
 QTEST_APPLESS_MAIN(tst_QCache)
